--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # next.js
 /.next/
 /out/
+!public/
 
 # production
 /build
@@ -25,6 +26,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
+.env.build
 .env.local
 .env.development.local
 .env.test.local
