--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "expressfeedback",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.x",
-    "react": "17.x",
-    "react-dom": "17.x"
+    "firebase": "^7.17.1",
+    "next": "^9.4.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
