--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.17.1",
     "next": "^9.4.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-hook-form": "^5.7.2"
   }
 }
