--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emotion-theming": "^10.0.27",
     "firebase": "^7.17.1",
     "firebase-admin": "^8.12.1",
+    "js-cookie": "^2.2.1",
     "next": "^9.4.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
