--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@stripe/stripe-js": "^1.8.0",
     "date-fns": "^2.14.0",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.17.1",
     "firebase-admin": "^8.12.1",
     "js-cookie": "^2.2.1",
-    "next": "^11.1.0",
+    "next": "^9.4.0",
     "pino": "^6.3.2",
     "pino-logflare": "^0.3.2",
     "react": "^16.13.0",
