--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^8.12.1",
     "js-cookie": "^2.2.1",
     "next": "^11.1.0",
+    "next-seo": "^4.7.3",
     "pino": "^6.13.0",
     "pino-logflare": "^0.3.12",
     "react": "^16.13.0",
