--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emotion-theming": "^10.0.27",
     "firebase": "^7.17.1",
     "firebase-admin": "^8.12.1",
+    "iframe-resizer": "^4.3.2",
     "js-cookie": "^2.2.1",
     "next": "^11.1.0",
     "next-seo": "^4.7.3",
