--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@stripe/stripe-js": "^1.8.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.1.0",
+    "@stripe/stripe-js": "^1.17.0",
     "date-fns": "^2.23.0",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.17.1",
@@ -25,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^5.7.2",
+    "react-markdown": "^4.3.1",
     "swr": "^0.5.6"
   }
 }
